...
      }}
    >
      <Tab.Screen
        component={Homepage}
        name="index"
        options={{
          title: 'Home',
          unmountOnBlur: true,
          tabBarTestID: 'home-tab',
          tabBarLabel: ({ focused, color, children }) => (
            <Text
              style={{
                marginTop: 6,
...
        }}
      />
      <Tab.Screen
        component={Favourites}
        name="favourites"
        options={{
          title: 'Favourites',
          unmountOnBlur: true,
          tabBarTestID: 'favourites-tab',
          tabBarLabel: ({ focused, color, children }) => (
            <Text
              style={{
                marginTop: 6,
...
