...
  FlatList,
  ScrollView,
  StyleSheet,
  Text,
  View,
} from 'react-native';
import RecipeCard from './recipe-card';

const RecipeList = ({
  items,
  isLoading,
  title,
  isSearching = false,
...
