...
        }}
      />
      {isSearching && filteredRecipes.length === 0 && !isLoading ? (
        <NothingFoundCard testID="nothing-found-message" search={searchText} />
      ) : (
        <RecipeList
          title={"Popular"}
          isSearching={isSearching}
          items={isSearching ? filteredRecipes : recipes}
          isLoading={isLoading}
        />
      )}
    </View>
...
