...
      setIsFavorite(favourites.some((fav) => fav.id === item.id));
    }
  }, [favourites, item]);

  return (
    <Pressable
      testID="recipe-card"
      style={styles.container}
      onPress={() =>
        navigation.navigate("RecipeDetails", {
          recipeId: JSON.stringify(item.id),
        })
      }
    >
      {isFavorite && (
        <ActionButton
          testID="favorite-icon"
          icon={
            <FavouriteIcon
              color={BaseColors.highlightDark}
              width={20}
              height={20}
            />
...
